Between turns, the webpage turns invisible and game interaction is prevented until the next player presses spacebar
This prevents players from looking at each other's cards. However, now, I
must go through this same process between prompting players about calling
BS.

--- a/css/bs.css
+++ b/css/bs.css
@@ -17,3 +17,7 @@
 .invisible {
   visibility: hidden;
 }
+
+#interim {
+  font-size: 2em;
+}
